fix: fixed column spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -30,6 +30,10 @@
         @apply pl-0;
       }
 
+      &:last-child {
+        @apply w-1/2;
+      }
+
       .btn {
         @apply block ml-[-10px] md:ml-auto lg:text-center;
 
